deps/v8/test/message/fail/undefined-keyed-property.out
# Copyright 2017 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:6: TypeError: undefined is not iterable (cannot read property Symbol(Symbol.iterator))
x[Symbol.iterator];
 ^
TypeError: undefined is not iterable (cannot read property Symbol(Symbol.iterator))
    at *%(basename)s:6:2
